# audio-articles

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-14-local-mode.md  2026-04-15-login.md
docs/superpowers/specs/: 2026-04-14-local-mode-design.md  2026-04-15-login-design.md
src/audio_articles/: __init__.py
src/audio_articles/cli/: main.py
src/audio_articles/core/: asset_extractor.py  auth.py  companion_pdf.py  config.py  exceptions.py  fetcher.py  manifest.py  models.py  pipeline.py  qa.py  summarizer.py  tts.py
src/audio_articles/web/: app.py  routes.py  schemas.py
src/audio_articles/web/static/: index.html  library.html
tests/: conftest.py  test_asset_extractor.py  test_auth.py  test_cli_batch.py  test_companion_pdf.py  test_fetcher.py  test_manifest.py  test_pipeline.py  test_qa.py  test_summarizer.py  test_tts.py
